ingress.yaml
  apiVersion: networking.k8s.io/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: pumpkinpatch-ingress
  spec:
    rules:
      - host: gslcpumpkinpatch.com
        http:
          paths:
            - backend:
                serviceName: wordpress-service
                servicePort: 80
              path: /
    # This section is only required if TLS is to be enabled for the Ingress
    tls:
    - hosts:
      - gslcpumpkinpatch.com
      secretName: patch-ingress-tls

# If TLS is enabled for the Ingress, a Secret containing the certificate and key must also be provided:
